# HA-Hvac-Zoning

./: .coverage  .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/hvac_zoning/: __init__.py  climate.py  config_flow.py  const.py  manifest.json  utils.py
custom_components/hvac_zoning/translations/: en.json
tests/: common.py  conftest.py
tests/custom_components/hvac_zoning/: conftest.py  test_climate.py  test_config_flow.py  test_init.py  test_utils.py
